# TradingSystems

./: .gitignore  CMakeLists.txt  README.md  main.cpp
trading-system/: CMakeLists.txt  README.md  main.cpp
trading-system/MarketDataManager/: CMakeLists.txt
trading-system/MarketDataManager/src/: DataManager.cpp
trading-system/MarketDataManager/tests/: CMakeLists.txt  main.cpp
trading-system/MarketFeedHandler/: CMakeLists.txt  README.md
trading-system/MarketFeedHandler/src/: FeedHandler.cpp
trading-system/MarketFeedHandler/tests/: CMakeLists.txt  main.cpp
trading-system/OffsetHedger/: CMakeLists.txt  README.md
trading-system/OffsetHedger/tests/: CMakeLists.txt
trading-system/OrderBookManager/: CMakeLists.txt  README.md
trading-system/OrderBookManager/src/: BookManager.cpp  OrderBook.cpp
trading-system/OrderBookManager/tests/: CMakeLists.txt  main.cpp
trading-system/OrderGateway/: README.md
trading-system/OrderTracker/src/: OrderTracker.cpp
trading-system/OrderTracker/tests/: CMakeLists.txt  main.cpp
trading-system/PositionTracker/: CMakeLists.txt  README.md
trading-system/PositionTracker/src/: PositionTracker.cpp
trading-system/PositionTracker/tests/: CMakeLists.txt  main.cpp
trading-system/RiskManager/: CMakeLists.txt
trading-system/StrategyEngine/: CMakeLists.txt  README.md
trading-system/StrategyEngine/src/: StrategyEngine.cpp
trading-system/StrategyEngine/tests/: main.cpp
trading-system/build_inputs/: default.txt
trading-system/common/: CMakeLists.txt
trading-system/common/include/common/: Order.hpp  (+5 more)
trading-system/main-pipeline/: CMakeLists.txt  README.md
trading-system/main-pipeline/MarketDataStream/: CMakeLists.txt  README.md
trading-system/main-pipeline/OrderBookBuilder/: CMakeLists.txt  README.md
trading-system/main-pipeline/OrderGateway/: CMakeLists.txt
trading-system/main-pipeline/RateLimiter/: CMakeLists.txt  README.md
trading-system/main-pipeline/RiskManager/: README.md
trading-system/main-pipeline/StrategyEngine/: CMakeLists.txt  README.md
trading-system/side-systems/: CMakeLists.txt  README.md
trading-system/side-systems/OrderTracker/: CMakeLists.txt  README.md
trading-system/side-systems/PositionPnLTracker/: CMakeLists.txt  README.md
trading-system/side-systems/TradeLogger/: CMakeLists.txt
(+130 files in other folders)
